Title and first link in HTML and CSS files: FIXED

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <!-- page title for Excursion -->
 <head>
-  <meta charset="utf-8">
   <title>Excursion</title>
+  <link href="./resources//css/style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
@@ -12,12 +12,12 @@
 
 <!-- Header Text -->
 <div class="topline">
-  <h1>Discover hidden places in the world around you</h1>
+  <p>Discover hidden places in the world around you</p>
 </div>
 
 <!-- Download link -->
 <div class="link">
-  <h3>Download Excursion (Coming soon!)</h3>
+  <p>Download Excursion (Coming soon!)</p>
 </div>
 
 <!-- Top navigation structure
