Change link text to hyperlink and fix CSS for color

--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
   <p>Discover hidden places in the world around you</p>
 </div>
 
-<!-- Download link -->
+<!-- Download link, currently redirecting to page -->
 <div class="link">
-  <p>Download Excursion (Coming soon!)</p>
+  <a href="./index.html">Download Excursion (Coming soon!)</a>
 </div>
+
+<!-- Phone image and video -->
+
 
 <!-- Top navigation structure
   <nav>
