--- a/index.html
+++ b/index.html
@@ -20,25 +20,23 @@
   <a href="./index.html">Download Excursion (Coming soon!)</a>
 </div>
 
-<!-- Phone image and video -->
+<!-- Phone video, camp photo, and phone icon -->
+
+<div class="media">
+  <video autoplay loop width="400" text-align="center">
+    <source src="./resources/excursion.mp4" type="video/mp4">
+  </video>
+
+  <br>
+
+  <img src="./resources/camp.jpg" />
+
+  <br>
+
+  <img src="./resources/phone.png" />
+</div>
 
 
-<!-- Top navigation structure
-  <nav>
-    <a href="./home.html">Home</a>
-    <a href="./index.html">Menu</a>
-  </nav> -->
-
-  <!-- Large page text header
-
-  <div id="desserts">
-    <h3>Desserts</h3>
-    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-1/freelance1-img_chocchip-cookie.jpg" />
-    <ol>
-      <li><strong>Chocolate Chip Cookie</strong> Enough said <em>$2</em></li>
-      <li><strong>Brownie Sundae</strong> Vanilla ice cream with chocolate sauce, nuts and a cherry on top <em>$6</em></li>
-    </ol>
-  </div> -->
 
 
 </body>
