--- a/index.html
+++ b/index.html
@@ -29,13 +29,33 @@
 
   <br>
 
-  <img src="./resources/camp.jpg" />
+  <div id="tagline">
+    <p>Your personal travel guide</p>
+  <div>
+  <div id="overview">
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+  <div>
 
+  <img src="./resources/camp.jpg" />
   <br>
 
   <img src="./resources/phone.png" />
+  <br>
 </div>
 
+<div id="tagline">
+  <p>Coming Soon for iPhone and Android</p>
+<div>
+
+<!-- Download link, currently redirecting to page -->
+<div class="link">
+  <a href="./index.html">Download Excursion (Coming soon!)</a>
+</div>
+
+<!-- Copyright -->
+<div id="copyright">
+  <p>© Excursion</p>
+<div>
 
 
 
