--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <!-- Header Text -->
 <div class="topline">
-  <p>Discover hidden places in the world around you</p>
+  <h1>Discover hidden places in the world around you</h1>
 </div>
 
 <!-- Download link, currently redirecting to page -->
@@ -37,6 +37,7 @@
   <div>
 
   <img src="./resources/camp.jpg" />
+  <br>
   <br>
 
   <img src="./resources/phone.png" />
